Fix layout issues and remove course createdBy schema element

--- a/frontend/src/modules/sidebar/less/sidebar.less
+++ b/frontend/src/modules/sidebar/less/sidebar.less
@@ -153,10 +153,6 @@
   }
 }
 
-.sidebar-row-input {
-  margin: 10px 25px;
-}
-
 .sidebar input[type="text"] {
   height: 25px;
   background: @sidebar-input-color;
