--- a/frontend/src/modules/user/less/login.less
+++ b/frontend/src/modules/user/less/login.less
@@ -6,7 +6,6 @@
   &.location-reset {
     .no-ui;
 
-    max-width: 450px;
     margin: 0 auto;
     color: #fff;
 
@@ -30,9 +29,6 @@
 
   .login-logo {
     height: 123px;
-    background-image: url('assets/adapt-learning-logo-white.png');
-    background-position: center;
-    background-repeat: no-repeat;
   }
 
   .login-title {
